// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aspect ratio plugin > add completions > completions 1`] = `
{
  "aspectRatio": [
    "aspect-w-{float}",
    "aspect-h-{float}",
    "aspect-{fraction}",
  ],
}
`;

exports[`aspect ratio plugin > interpret test > aspect-ratio base 1`] = `
".aspect-none {
  position: static;
  padding-bottom: 0;
}
.aspect-none > * {
  position: static;
  height: auto;
  width: auto;
  top: auto;
  right: auto;
  bottom: auto;
  left: auto;
}
.aspect-auto {
  aspect-ratio: auto;
}
.aspect-square {
  aspect-ratio: 1 / 1;
}
.aspect-video {
  aspect-ratio: 16 / 9;
}
.aspect-w-16 {
  --tw-aspect-w: 16;
  position: relative;
  padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
}
.aspect-w-16 > * {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.aspect-h-9 {
  --tw-aspect-h: 9;
}
.aspect-9\\/16 {
  position: relative;
  padding-bottom: 56.25%;
}
.aspect-9\\/16 > * {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}"
`;

exports[`aspect ratio plugin > works with prefix > aspect-ratio with prefix 1`] = `
".windi-aspect-none {
  position: static;
  padding-bottom: 0;
}
.windi-aspect-none > * {
  position: static;
  height: auto;
  width: auto;
  top: auto;
  right: auto;
  bottom: auto;
  left: auto;
}
.windi-aspect-auto {
  aspect-ratio: auto;
}
.windi-aspect-square {
  aspect-ratio: 1 / 1;
}
.windi-aspect-video {
  aspect-ratio: 16 / 9;
}
.windi-aspect-w-16 {
  --tw-aspect-w: 16;
  position: relative;
  padding-bottom: calc(var(--tw-aspect-h) / var(--tw-aspect-w) * 100%);
}
.windi-aspect-w-16 > * {
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
.windi-aspect-h-9 {
  --tw-aspect-h: 9;
}
@media (min-width: 640px) {
  .sm\\:windi-aspect-9\\/16 {
    position: relative;
    padding-bottom: 56.25%;
  }
  .sm\\:windi-aspect-9\\/16 > * {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }
}"
`;
